--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt maxime, consectetur blanditiis distinctio laudantium maiores hic a possimus ipsum voluptates inventore veritatis. Exercitationem, a beatae! Atque fuga mollitia eum ullam.</p>
   
 </body>
 </html>
