--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de viagens</title>
   <link rel="stylesheet" href="styles/index.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt maxime, consectetur blanditiis distinctio laudantium maiores hic a possimus ipsum voluptates inventore veritatis. Exercitationem, a beatae! Atque fuga mollitia eum ullam.</p>
   
 </body>
 </html>
