--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
   <div class="bg-surface-color">
-      <nav class="container"> <!--cabeçalho-->
-        <a href="#" id="logo">
-          <img src="./assets/Logo.svg" alt="logomarca">
-        </a>
+    <nav class="container"> <!--cabeçalho-->
+      <a href="#" id="logo">
+        <img src="./assets/Logo.svg" alt="logomarca">
+      </a>
         
-        <ul id="primary-menu">
+      <ul id="primary-menu">
           <li>
             <a href="#">
               <img src="assets/icons/MagnifyingGlass.svg" alt="icone de lupa">
@@ -27,14 +27,40 @@
           </li>
           <li><a href="#"></a>Explorer</li>
           <li><a href="#"></a>Minhas viagens</li>
-          <li><a href="#">
-            <img src="assets/Profile pic.png" alt="imagem de isabela torres">
-          </a>
-          </li>
-        </ul>
-      </nav>
-   </div>
-   <header>
-   </header> 
+        <li><a href="#">
+          <img src="assets/Profile pic.png" alt="imagem de isabela torres">
+        </a>
+        </li>
+      </ul>
+    </nav>
+  
+  <header>
+    <div class="container">
+      <div id="profile">
+        <img src="assets/Profile pic.png" alt="imagem de isabela torres">
+        <div>
+          <h1>Isabela Torres</h1>
+          <p>Amante de viagens, cultura e gastronomia.   🌍✈️ <br>
+            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+        </div>
+      </div>
+      
+      <ul id="info">
+        <li>
+          <img src="assets/icons/MapPin.svg" alt="icone de mapa">
+          <span>São Paulo, Brazil</span>
+        </li>
+        <li>
+          <img src="assets/icons/AirplaneTilt.svg" alt="icone de avião">
+          <span>37 países</span>
+        </li>
+        <li>
+          <img src="assets/icons/Image.svg" alt="icone de imagem">
+          <span>240 fotos</span>
+        </li>
+      </ul>
+    </div>
+  </header> 
+ </div>
 </body>
 </html>
